<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_home"
        android:icon="@android:drawable/ic_menu_today"
        android:title="@string/nav_home" />
    <item
        android:id="@+id/nav_jobs"
        android:icon="@android:drawable/ic_menu_agenda"
        android:title="@string/nav_jobs" />
    <item
        android:id="@+id/nav_assessment"
        android:icon="@android:drawable/ic_menu_compass"
        android:title="@string/nav_assessment" />
    <item
        android:id="@+id/nav_learning"
        android:icon="@android:drawable/ic_menu_slideshow"
        android:title="@string/nav_learning" />
    <item
        android:id="@+id/nav_profile"
        android:icon="@android:drawable/ic_menu_myplaces"
        android:title="@string/nav_profile" />
</menu>
